--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "peerDependencies": {
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
+    "lodash": "^4.17.11",
     "mirador": "^3.0.0-beta.8",
     "prop-types": "^15.7.2",
     "react": "16.x"
