--- a/package.json
+++ b/package.json
@@ -21,15 +21,19 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "uuid": "^8.0.0"
+    "@psychobolt/react-paperjs": "0.0.56",
+    "@psychobolt/react-paperjs-editor": "0.0.10"
   },
   "peerDependencies": {
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "lodash": "^4.17.11",
     "mirador": "^3.0.0-beta.8",
+    "openseadragon": "^2.4.2",
     "prop-types": "^15.7.2",
-    "react": "16.x"
+    "react": "16.x",
+    "react-dom": "16.x",
+    "uuid": "^8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
@@ -54,7 +58,8 @@
     "nwb": "0.24.x",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "uuid": "^8.0.0"
   },
   "author": "",
   "homepage": "",
