--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "peerDependencies": {
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.52",
     "lodash": "^4.17.11",
     "mirador": "^3.0.0-beta.8",
     "prop-types": "^15.7.2",
@@ -41,6 +42,7 @@
     "@babel/preset-react": "^7.9.4",
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.52",
     "babel-eslint": "^10.1.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
