--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^4.0.0",
     "jest": "^26.0.1",
+    "jest-localstorage-mock": "^2.4.2",
     "mirador": "^3.0.0-beta.8",
     "nwb": "0.24.x",
     "prop-types": "^15.7.2",
