--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.52",
     "babel-eslint": "^10.1.0",
+    "canvas": "^2.6.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
@@ -56,6 +57,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^4.0.0",
     "jest": "^26.0.1",
+    "jest-canvas-mock": "^2.2.0",
     "jest-localstorage-mock": "^2.4.2",
     "mirador": "^3.0.0-beta.8",
     "nwb": "0.24.x",
