Enable basic editing of annotations

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@psychobolt/react-paperjs-editor": "0.0.10",
     "draft-js": "^0.11.5",
     "draft-js-export-html": "^1.4.1",
+    "draft-js-import-html": "^1.4.1",
     "material-ui-color-components": "^0.3.0",
     "paper": "^0.12.4",
     "react-color": "^2.18.1"
