--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "jest": "^26.0.1",
     "jest-canvas-mock": "^2.2.0",
     "jest-localstorage-mock": "^2.4.2",
-    "mirador": "^3.0.0-beta.9",
+    "mirador": "^3.0.0-rc.1",
     "nwb": "0.24.x",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
