--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
   "dependencies": {
     "@psychobolt/react-paperjs": "0.0.57",
     "@psychobolt/react-paperjs-editor": "0.0.11",
-    "draft-js": "^0.11.5",
+    "draft-js": "^0.11.6",
     "draft-js-export-html": "^1.4.1",
     "draft-js-import-html": "^1.4.1",
     "material-ui-color-components": "^0.3.0",
-    "paper": "^0.12.4",
+    "paper": "^0.12.11",
     "react-color": "^2.18.1"
   },
   "peerDependencies": {
@@ -35,41 +35,41 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.52",
     "lodash": "^4.17.11",
-    "mirador": "^3.0.0-beta.9",
+    "mirador": "^3.0.0-rc.3",
     "prop-types": "^15.7.2",
     "react": "16.x",
     "react-dom": "16.x",
     "uuid": "^8.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
-    "@material-ui/core": "^4.9.13",
+    "@babel/core": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.52",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "babel-eslint": "^10.1.0",
     "canvas": "^2.6.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-airbnb": "^18.2.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-flowtype": "^4.7.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jest": "^23.9.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^4.0.0",
-    "jest": "^26.0.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^23.18.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.6",
+    "jest": "^26.1.0",
     "jest-canvas-mock": "^2.2.0",
     "jest-localstorage-mock": "^2.4.2",
-    "mirador": "^3.0.0-rc.1",
-    "nwb": "0.24.x",
+    "mirador": "^3.0.0-rc.3",
+    "nwb": "^0.24.7",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "uuid": "^8.0.0"
+    "uuid": "^8.2.0"
   },
   "author": "",
   "homepage": "",
