--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0",
     "react-dom": "^17.0",
+    "react-i18next": "^11.7.0",
     "uuid": "^8.0.0"
   },
   "devDependencies": {
@@ -62,6 +63,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.6",
+    "i18next": "^19.5.0",
     "jest": "^26.1.0",
     "jest-canvas-mock": "^2.2.0",
     "jest-localstorage-mock": "^2.4.2",
@@ -70,6 +72,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0",
     "react-dom": "^17.0",
+    "react-i18next": "^11.7.0",
     "uuid": "^8.2.0"
   },
   "author": "",
